<resources>
    <string name="app_name">MoneyManagement</string>
    <string name="cac_khoan_chi">Cac khoan chi:</string>
    <string name="total_fixes">1.500.500</string>
    <string name="unit_money">đ</string>
    <string name="start_day">Start day</string>
    <string name="end_day">End day</string>
    <string name="btn_find">Tim Kiem</string>
    <string name="btn_add">Them</string>
    <string name="btn_update">Sua</string>
    <string name="btn_delete">Xoa</string>
    <string name="choose_day">Chọn ngày</string>
    <string name="datetime">Ngày:</string>
    <string name="content">Nội dung</string>
    <string name="lbl_content">Nội dung:</string>
    <string name="amount_money">Số tiền</string>
    <string name="icon">breakfast</string>
    <string name="breakfast">breakfast</string>
    <string name="total_expense">Tổng Chi:</string>
    <string name="_100_000">100.000</string>
    <string name="balance">số dư hiện tại:</string>
    <string name="_1_000_000">100.000.000</string>
    <string name="find_expenses_by_date">Tìm kiếm chi tiêu theo ngày</string>
    <string name="_28">28</string>
    <string name="today">Today</string>
    <string name="_11_2023">11/2023</string>
    <string name="_50_000">-50.000</string>
    <string name="_50_000_">-50.000</string>
    <string name="mama_send">Tiền má gửi</string>
    <string name="DD">đ</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="select_day">Chọn ngày</string>
</resources>